@@ -1,3 +1,5 @@
+import org.json.JSONObject;
+
 import java.awt.*;
 import java.awt.event.*;
 import java.awt.image.BufferedImage;
@@ -19,15 +21,29 @@ import javax.swing.border.LineBorder;
 /**
  * Derived from https://github.com/MinecraftForge/Installer/
  * Copyright 2013 MinecraftForge developers, & Mark Browning, StellaArtois
- * 
+ *
  * Licensed under GNU LGPL v2.1 or later.
- * 
+ *
  * @author mabrowning
  *
  */
 public class Installer extends JPanel  implements PropertyChangeListener
 {
-	private static final long serialVersionUID = -562178983462626162L;
+    private static final long serialVersionUID = -562178983462626162L;
+
+    private static final boolean ALLOW_FORGE_INSTALL = false;
+
+    // Currently needed for Win boxes - C++ redists
+
+    // Annoyingly we need two redists at the moment - we can only build jherico's OculusSDK with
+    // VS2012 in cmake currently (for some reason it will not build under VS2010). All other win
+    // native libs are compiled under VS2010. Hence we need *two* redists, and then one for 32 bit,
+    // and one for 64bit (so we account for all windows / JRE 32 / 64 bit combinations). Bad.
+
+    public static String winredist2012_64url = "http://download.microsoft.com/download/1/6/B/16B06F60-3B20-4FF2-B699-5E9B7962F9AE/VSU_4/vcredist_x64.exe";
+    public static String winredist2012_32url = "http://download.microsoft.com/download/1/6/B/16B06F60-3B20-4FF2-B699-5E9B7962F9AE/VSU_4/vcredist_x86.exe";
+    public static String winredist2010_64url = "http://download.microsoft.com/download/A/8/0/A80747C3-41BD-45DF-B505-E9710D2744E0/vcredist_x64.exe";
+    public static String winredist2010_32url = "http://download.microsoft.com/download/C/6/D/C6D0FD4E-9E53-4897-9B91-836EBA2AACD3/vcredist_x86.exe";
 
     /* DO NOT RENAME THESE STRING CONSTS - THEY ARE USED IN (AND THE VALUES UPDATED BY) THE AUTOMATED BUILD SCRIPTS */
     private static final String MINECRAFT_VERSION = "1.7.10";
@@ -40,7 +56,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private static final String FORGE_VERSION     = "10.13.2.1291";
     /* END OF DO NOT RENAME */
 
-	private InstallTask task;
+    private InstallTask task;
     private static ProgressMonitor monitor;
 
     static private File targetDir;
@@ -48,13 +64,14 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private JLabel infoLabel;
     private JDialog dialog;
     private JPanel fileEntryPanel;
-	private Frame emptyFrame;
-	private String jar_id;
-	private String version;
-	private String mod = "";
-	private JCheckBox useForge;
-	private JComboBox forgeVersion;
-	private JCheckBox useHydra;
+    private Frame emptyFrame;
+    private String jar_id;
+    private String version;
+    private String mod = "";
+    private JCheckBox useForge;
+    private JCheckBox createProfile;
+    private JComboBox forgeVersion;
+    private JCheckBox useHydra;
     private JCheckBox useHrtf;
     private final boolean QUIET_DEV = false;
 	private File releaseNotes = null;
@@ -66,18 +83,18 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private boolean isWindows = false;
     private String appDataDir;
 
-	class InstallTask extends SwingWorker<Void, Void>{
-		private boolean DownloadOptiFine()
-		{
+    class InstallTask extends SwingWorker<Void, Void>{
+        private boolean DownloadOptiFine()
+        {
             boolean success = true;
             boolean deleted = false;
 
-			try {
-			    File fod = new File(targetDir,OF_LIB_PATH+OF_JSON_NAME);
-			    fod.mkdirs();
-			    File fo = new File(fod,"OptiFine-"+OF_JSON_NAME+".jar");
+            try {
+                File fod = new File(targetDir,OF_LIB_PATH+OF_JSON_NAME);
+                fod.mkdirs();
+                File fo = new File(fod,"OptiFine-"+OF_JSON_NAME+".jar");
 
-			    // Attempt to get the Optifine MD5
+                // Attempt to get the Optifine MD5
                 String optOnDiskMd5 = GetMd5(fo);
                 System.out.println(optOnDiskMd5 == null ? fo.getCanonicalPath() : fo.getCanonicalPath() + " MD5: " + optOnDiskMd5);
 
@@ -105,22 +122,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
                 }
 
                 // Need to attempt download...
-                FileOutputStream fos = new FileOutputStream(fo);
-                try {
-                    String surl = "http://optifine.net/download.php?f=OptiFine_" + OF_FILE_NAME + OF_VERSION_EXT;
-                    System.out.println(surl);
-                    URL url = new URL(surl);
-                    ReadableByteChannel rbc = Channels.newChannel(url.openStream());
-                    long bytes = fos.getChannel().transferFrom(rbc, 0, Long.MAX_VALUE);
-                    fos.flush();
-                }
-                catch(Exception ex) {
-                    ex.printStackTrace();
-                    success = false;
-                }
-                finally {
-                    fos.close();
-                }
+                success = downloadFile("http://optifine.net/download.php?f=OptiFine_" + OF_FILE_NAME + OF_VERSION_EXT, fo);
 
                 // Check (potentially) downloaded optifine md5
                 optOnDiskMd5 = GetMd5(fo);
@@ -137,14 +139,42 @@ public class Installer extends JPanel  implements PropertyChangeListener
                     return false;
                 }
 
-			    return true;
-			} catch (Exception e) {
-				finalMessage += " Error: "+e.getLocalizedMessage();
-			}
-			return false;
-		}
+                return true;
+            } catch (Exception e) {
+                finalMessage += " Error: "+e.getLocalizedMessage();
+            }
+            return false;
+        }
 
-		private String GetMd5(File fo)
+        private boolean downloadFile(String surl, File fo)
+        {
+            boolean success = true;
+
+            FileOutputStream fos = null;
+            try {
+                fos = new FileOutputStream(fo);
+                System.out.println(surl);
+                URL url = new URL(surl);
+                ReadableByteChannel rbc = Channels.newChannel(url.openStream());
+                long bytes = fos.getChannel().transferFrom(rbc, 0, Long.MAX_VALUE);
+                fos.flush();
+            }
+            catch(Exception ex) {
+                ex.printStackTrace();
+                success = false;
+            }
+            finally {
+                if (fos != null) {
+                    try {
+                        fos.close();
+                    } catch (Exception e) { }
+                }
+            }
+
+            return success;
+        }
+
+        private String GetMd5(File fo)
         {
             if (!fo.exists())
                 return null;
@@ -186,118 +216,118 @@ public class Installer extends JPanel  implements PropertyChangeListener
             }
         }
 
-		private boolean SetupMinecraftAsLibrary() {
-			File lib_dir = new File(targetDir,"libraries/net/minecraft/Minecraft/"+MINECRAFT_VERSION );
-			lib_dir.mkdirs();
-			File lib_file = new File(lib_dir,"Minecraft-"+MINECRAFT_VERSION+".jar");
-			if( lib_file.exists() && lib_file.length() > 4500000 )return true; //TODO: should md5sum it here, I suppose
-			try {
-				ZipInputStream input_jar = new ZipInputStream(new FileInputStream(new File(targetDir,"versions/"+MINECRAFT_VERSION+"/"+MINECRAFT_VERSION+".jar")));
-				ZipOutputStream lib_jar= new ZipOutputStream(new FileOutputStream(lib_file));
-				
-				ZipEntry ze = null;
-				byte data[] = new byte[1024];
-				while ((ze = input_jar.getNextEntry()) != null) {
-					if(!ze.isDirectory() && !ze.getName().contains("META-INF"))
-					{
-						lib_jar.putNextEntry(new ZipEntry(ze.getName()));
-						int d;
-						while( (d = input_jar.read(data)) != -1 )
-						{
-							lib_jar.write(data, 0, d);
-							
-						}
-						lib_jar.closeEntry();
-						input_jar.closeEntry();
-					}
-				}
-				input_jar.close();
-				lib_jar.close();
-				return true;
-			} catch (Exception e) {
-				finalMessage += " Error: "+e.getLocalizedMessage();
-			}
-			return false;
-		}
+        private boolean SetupMinecraftAsLibrary() {
+            File lib_dir = new File(targetDir,"libraries/net/minecraft/Minecraft/"+MINECRAFT_VERSION );
+            lib_dir.mkdirs();
+            File lib_file = new File(lib_dir,"Minecraft-"+MINECRAFT_VERSION+".jar");
+            if( lib_file.exists() && lib_file.length() > 4500000 )return true; //TODO: should md5sum it here, I suppose
+            try {
+                ZipInputStream input_jar = new ZipInputStream(new FileInputStream(new File(targetDir,"versions/"+MINECRAFT_VERSION+"/"+MINECRAFT_VERSION+".jar")));
+                ZipOutputStream lib_jar= new ZipOutputStream(new FileOutputStream(lib_file));
 
-		private boolean ExtractVersion() {
-			if( jar_id != null )
-			{
-				InputStream version_json; 
-				if(useForge.isSelected() /*&& forgeVersion.getSelectedItem() != forgeNotFound*/ ) {
-					String filename;
-					if( useHydra.isSelected() ) {
-						filename = "version-forge.json";
-						mod="-forge";
-					} else {
-						filename = "version-forge-nohydra.json";
-						mod="-forge-nohydra";
-					}
+                ZipEntry ze = null;
+                byte data[] = new byte[1024];
+                while ((ze = input_jar.getNextEntry()) != null) {
+                    if(!ze.isDirectory() && !ze.getName().contains("META-INF"))
+                    {
+                        lib_jar.putNextEntry(new ZipEntry(ze.getName()));
+                        int d;
+                        while( (d = input_jar.read(data)) != -1 )
+                        {
+                            lib_jar.write(data, 0, d);
 
-					version_json = new FilterInputStream( Installer.class.getResourceAsStream(filename) ) {
-						public int read(byte[] buff) throws IOException {
-							int ret = in.read(buff);
-							if( ret > 0 ) {
-								String s = new String( buff,0, ret, "UTF-8");
-								//s = s.replace("$FORGE_VERSION", (String)forgeVersion.getSelectedItem());
-								ret = s.length();
-								System.arraycopy(s.getBytes("UTF-8"), 0, buff, 0, ret);
-							}
-							return ret;
-						}
-						
-					};
-				} else {
-					String filename;
-					if( useHydra.isSelected() ) {
-						filename = "version.json";
-					} else {
-						filename = "version-nohydra.json";
-						mod="-nohydra";
-					}
-					version_json = Installer.class.getResourceAsStream(filename);
-				}
-				jar_id += mod;
-				InputStream version_jar =Installer.class.getResourceAsStream("version.jar");
-				if( version_jar != null && version_json != null )
-				try {
-					File ver_dir = new File(new File(targetDir,"versions"),jar_id);
-					ver_dir.mkdirs();
-					File ver_json_file = new File (ver_dir, jar_id+".json");
-					FileOutputStream ver_json = new FileOutputStream(ver_json_file); 
-					int d;
-					byte data[] = new byte[40960];
-					
-					// Extract json
-	                while ((d = version_json.read(data)) != -1) {
-	                    ver_json.write(data,0,d);
-	                }
-	                ver_json.close();
-	                
-	                // Extract new lib
-					File lib_dir = new File(targetDir,"libraries/com/mtbs3d/minecrift/"+version);
-					lib_dir.mkdirs();
-					File ver_file = new File (lib_dir, "minecrift-"+version+".jar");
-					FileOutputStream ver_jar = new FileOutputStream(ver_file); 
-	                while ((d = version_jar.read(data)) != -1) {
-	                    ver_jar.write(data,0,d);
-	                }
-	                ver_jar.close();
-	                
-	                //Create empty version jar file
-	                //All code actually lives in libraries/
-					ZipOutputStream null_jar = new ZipOutputStream(new FileOutputStream(new File (ver_dir, jar_id+".jar"))); 
-	                null_jar.putNextEntry(new ZipEntry("Classes actually in libraries directory"));
-	                null_jar.closeEntry();
-	                null_jar.close();
-					return ver_json_file.exists() && ver_file.exists();
-				} catch (Exception e) {
-					finalMessage += " Error: "+e.getLocalizedMessage();
-				}
-				
-			}
-			return false;
-		}
+                        }
+                        lib_jar.closeEntry();
+                        input_jar.closeEntry();
+                    }
+                }
+                input_jar.close();
+                lib_jar.close();
+                return true;
+            } catch (Exception e) {
+                finalMessage += " Error: "+e.getLocalizedMessage();
+            }
+            return false;
+        }
+
+        private boolean ExtractVersion() {
+            if( jar_id != null )
+            {
+                InputStream version_json;
+                if(useForge.isSelected() /*&& forgeVersion.getSelectedItem() != forgeNotFound*/ ) {
+                    String filename;
+                    if( useHydra.isSelected() ) {
+                        filename = "version-forge.json";
+                        mod="-forge";
+                    } else {
+                        filename = "version-forge-nohydra.json";
+                        mod="-forge-nohydra";
+                    }
+
+                    version_json = new FilterInputStream( Installer.class.getResourceAsStream(filename) ) {
+                        public int read(byte[] buff) throws IOException {
+                            int ret = in.read(buff);
+                            if( ret > 0 ) {
+                                String s = new String( buff,0, ret, "UTF-8");
+                                //s = s.replace("$FORGE_VERSION", (String)forgeVersion.getSelectedItem());
+                                ret = s.length();
+                                System.arraycopy(s.getBytes("UTF-8"), 0, buff, 0, ret);
+                            }
+                            return ret;
+                        }
+
+                    };
+                } else {
+                    String filename;
+                    if( useHydra.isSelected() ) {
+                        filename = "version.json";
+                    } else {
+                        filename = "version-nohydra.json";
+                        mod="-nohydra";
+                    }
+                    version_json = Installer.class.getResourceAsStream(filename);
+                }
+                jar_id += mod;
+                InputStream version_jar =Installer.class.getResourceAsStream("version.jar");
+                if( version_jar != null && version_json != null )
+                    try {
+                        File ver_dir = new File(new File(targetDir,"versions"),jar_id);
+                        ver_dir.mkdirs();
+                        File ver_json_file = new File (ver_dir, jar_id+".json");
+                        FileOutputStream ver_json = new FileOutputStream(ver_json_file);
+                        int d;
+                        byte data[] = new byte[40960];
+
+                        // Extract json
+                        while ((d = version_json.read(data)) != -1) {
+                            ver_json.write(data,0,d);
+                        }
+                        ver_json.close();
+
+                        // Extract new lib
+                        File lib_dir = new File(targetDir,"libraries/com/mtbs3d/minecrift/"+version);
+                        lib_dir.mkdirs();
+                        File ver_file = new File (lib_dir, "minecrift-"+version+".jar");
+                        FileOutputStream ver_jar = new FileOutputStream(ver_file);
+                        while ((d = version_jar.read(data)) != -1) {
+                            ver_jar.write(data,0,d);
+                        }
+                        ver_jar.close();
+
+                        //Create empty version jar file
+                        //All code actually lives in libraries/
+                        ZipOutputStream null_jar = new ZipOutputStream(new FileOutputStream(new File (ver_dir, jar_id+".jar")));
+                        null_jar.putNextEntry(new ZipEntry("Classes actually in libraries directory"));
+                        null_jar.closeEntry();
+                        null_jar.close();
+                        return ver_json_file.exists() && ver_file.exists();
+                    } catch (Exception e) {
+                        finalMessage += " Error: "+e.getLocalizedMessage();
+                    }
+
+            }
+            return false;
+        }
 
         private boolean EnableHRTF()           // Implementation by Zach Jaggi
         {
@@ -338,23 +368,189 @@ public class Installer extends JPanel  implements PropertyChangeListener
             } catch (InterruptedException e) {}
         }
 
-		/*
-		 * Main task. Executed in background thread.
-		 */
-		public String finalMessage;
-		@Override
-		public Void doInBackground() {
-			finalMessage = "Failed: Couldn't download Optifine. ";
-            monitor.setNote("Checking Optifine... Please donate to them!");
+        /*
+         * Main task. Executed in background thread.
+         */
+        public String finalMessage;
+        @Override
+        public Void doInBackground()
+        {
+            StringBuilder sbErrors = new StringBuilder();
+            String minecriftVersionName = "minecrift-" + version + mod;
+            boolean checkedRedists = false;
+            boolean redistSuccess = true;
+            monitor.setProgress(0);
+
+            try {
+                // Set progress dialog size (using reflection - hacky)
+                Field progressdialog = monitor.getClass().getDeclaredField("dialog");
+                if (progressdialog != null) {
+                    progressdialog.setAccessible(true);
+                    Dialog dlg = (Dialog) progressdialog.get(monitor);
+                    if (dlg != null) {
+                        dlg.setSize(450, 150);
+                        dlg.setLocationRelativeTo(null);
+                    }
+                }
+            }
+            catch (NoSuchFieldException e) {}
+            catch (IllegalAccessException e) {}
+
+
+            finalMessage = "Failed: Couldn't download C++ redistributables. ";
+            monitor.setNote("Checking for required libraries...");
             monitor.setProgress(5);
-			// Attempt optifine download...
-			boolean downloadedOptifine = false;
-			sleep(1800);
+            sleep(800);
+
+            if (System.getProperty("os.name").contains("Windows"))
+            {
+                // Windows C++ redists (ah the joys of c native code)
+
+                checkedRedists = true;
+
+                String tempDir = System.getProperty("java.io.tmpdir");
+
+                // Determine if we have a Win 64bit OS.
+                boolean is64bitOS = (System.getenv("ProgramFiles(x86)") != null);
+
+                File redist2012_64 = new File(tempDir + "/vcredist_x64_2012.exe");
+                File redist2012_32 = new File(tempDir + "/vcredist_x86_2012.exe");
+                File redist2010_64 = new File(tempDir + "/vcredist_x64_2010.exe");
+                File redist2010_32 = new File(tempDir + "/vcredist_x86_2010.exe");
+
+                boolean neededRedist2012_64 = false;
+                boolean neededRedist2012_32 = false;
+                boolean neededRedist2010_64 = false;
+                boolean neededRedist2010_32 = false;
+
+                // Download VS 2012 64bit
+				/*
+                if (redistSuccess && is64bitOS) {
+                    if (!redist2012_64.exists()) {
+                        neededRedist2012_64 = true;
+                        monitor.setNote("Downloading VC 2012 C++ 64bit redist...");
+                        monitor.setProgress(10);
+                        if (!downloadFile(winredist2012_64url, redist2012_64)) {
+                            redist2012_64.deleteOnExit();
+                            redistSuccess = false;
+                        }
+                    }
+                }
+				*/
+
+                // Download VS 2010 64bit
+                if (redistSuccess && is64bitOS) {
+                    if (!redist2010_64.exists()) {
+                        neededRedist2010_64 = true;
+                        monitor.setNote("Downloading VC 2010 C++ 64bit redist...");
+                        monitor.setProgress(15);
+                        if (!downloadFile(winredist2010_64url, redist2010_64)) {
+                            redist2010_64.deleteOnExit();
+                            redistSuccess = false;
+                        }
+                    }
+                }
+
+				/*
+                // Download VS 2012 32bit
+                if (redistSuccess && !redist2012_32.exists()) {
+                    neededRedist2012_32 = true;
+                    monitor.setNote("Downloading VC 2012 C++ 32bit redist...");
+                    monitor.setProgress(20);
+                    if (!downloadFile(winredist2012_32url, redist2012_32)) {
+                        redist2012_32.deleteOnExit();
+                        redistSuccess = false;
+                    }
+                }
+				*/
+
+                // Download VS 2010 32bit
+                if (redistSuccess && !redist2010_32.exists()) {
+                    neededRedist2010_32 = true;
+                    monitor.setNote("Downloading VC 2010 C++ 32bit redist...");
+                    monitor.setProgress(25);
+                    if (!downloadFile(winredist2010_32url, redist2010_32)) {
+                        redist2010_32.deleteOnExit();
+                        redistSuccess = false;
+                    }
+                }
+
+				/*
+                // Install VS2012 64bit
+                if (redistSuccess && is64bitOS && neededRedist2012_64) {
+                    monitor.setNote("Installing VC 2010 C++ 32bit redist...");
+                    monitor.setProgress(30);
+                    try {
+                        Process process = new ProcessBuilder(redist2012_64.getAbsolutePath(), "/quiet", "/norestart").start();
+                        process.waitFor();
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                        redist2012_64.deleteOnExit();
+                        redistSuccess = false;
+                    }
+                }
+				*/
+
+                // Install VS2010 64bit
+                if (redistSuccess && is64bitOS && neededRedist2010_64) {
+                    monitor.setNote("Installing VC 2010 C++ 64bit redist...");
+                    monitor.setProgress(33);
+                    try {
+                        Process process = new ProcessBuilder(redist2010_64.getAbsolutePath(), "/quiet", "/norestart").start();
+                        process.waitFor();
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                        redist2010_64.deleteOnExit();
+                        redistSuccess = false;
+                    }
+                }
+
+				/*
+                // Install VS2012 32bit
+                if (redistSuccess && neededRedist2012_32) {
+                    monitor.setNote("Installing VC 2012 C++ 32bit redist...");
+                    monitor.setProgress(36);
+                    try {
+                        Process process = new ProcessBuilder(redist2012_32.getAbsolutePath(), "/quiet", "/norestart").start();
+                        process.waitFor();
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                        redist2012_32.deleteOnExit();
+                        redistSuccess = false;
+                    }
+                }
+				*/
+
+                // Install VS2010 32bit
+                if (redistSuccess && neededRedist2010_32) {
+                    monitor.setNote("Installing VC 2010 C++ 32bit redist...");
+                    monitor.setProgress(39);
+                    try {
+                        Process process = new ProcessBuilder(redist2010_32.getAbsolutePath(), "/quiet", "/norestart").start();
+                        process.waitFor();
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                        redist2010_32.deleteOnExit();
+                        redistSuccess = false;
+                    }
+                }
+            }
+
+            if (checkedRedists && !redistSuccess) {
+                monitor.close();
+                return null;
+            }
+
+            finalMessage = "Failed: Couldn't download Optifine. ";
+            monitor.setNote("Checking Optifine... Please donate to them!");
+            monitor.setProgress(42);
+            // Attempt optifine download...
+            boolean downloadedOptifine = false;
+            sleep(1800);
             monitor.setNote("Downloading Optifine... Please donate to them!");
 
-			for (int i = 1; i <= 3; i++)
-			{
-                monitor.setProgress(10 * i);
+            for (int i = 1; i <= 3; i++)
+            {
                 if (DownloadOptiFine())
                 {
                     // Got it!
@@ -375,69 +571,80 @@ public class Installer extends JPanel  implements PropertyChangeListener
             }
             monitor.setProgress(50);
             monitor.setNote("Setting up Minecrift as a library...");
-			finalMessage = "Failed: Couldn't setup Minecrift "+MC_VERSION+" as library. Have you run "+MINECRAFT_VERSION+" at least once yet?";
-			sleep(800);
-			if(!SetupMinecraftAsLibrary())
-			{
+            finalMessage = "Failed: Couldn't setup Minecrift "+MC_VERSION+" as library. Have you run "+MINECRAFT_VERSION+" at least once yet?";
+            sleep(800);
+            if(!SetupMinecraftAsLibrary())
+            {
                 monitor.close();
-				return null;
-			}
+                return null;
+            }
             monitor.setProgress(75);
             monitor.setNote("Extracting correct Minecrift version...");
             sleep(700);
-			finalMessage = "Failed: Couldn't extract Minecrift. Try redownloading this installer.";
-			if(!ExtractVersion())
-			{
+            finalMessage = "Failed: Couldn't extract Minecrift. Try redownloading this installer.";
+            if(!ExtractVersion())
+            {
                 monitor.close();
-				return null;
-			}
+                return null;
+            }
             if(useHrtf.isSelected())
             {
                 monitor.setProgress(85);
                 monitor.setNote("Configuring HRTF audio...");
                 sleep(800);
-                finalMessage = "Failed to set up HRTF! Your game will still work but audio won't be binaural.";
                 if(!EnableHRTF())
                 {
-                    monitor.close();
-                    return null;
+                    sbErrors.append("Failed to set up HRTF! Minecrift will still work but audio won't be binaural.\n");
                 }
             }
+            boolean profileCreated = false;
+            if (createProfile.isSelected())
+            {
+                monitor.setProgress(95);
+                monitor.setNote("Creating Minecrift profile...");
+                sleep(800);
+                if (!updateLauncherJson(targetDir, minecriftVersionName))
+                    sbErrors.append("Failed to set up 'Minecrift' profile (you can still manually select Edit Profile->Use Version " + minecriftVersionName + " in the Minecraft launcher)\n");
+                else
+                    profileCreated = true;
+            }
             if (!downloadedOptifine) {
-                finalMessage = "Installed (but failed to download OptiFine). Restart Minecraft and Edit Profile->Use Version minecrift-" + version + mod +
+                finalMessage = "Installed (but failed to download OptiFine). Restart Minecraft" +
+                        (profileCreated == false ? " and Edit Profile->Use Version " + minecriftVersionName : " and select the '" + getMinecraftProfileName() + "' profile.") +
                         "\nPlease download and install Optifine " + OF_FILE_NAME + " from https://optifine.net/downloads before attempting to play.";
             }
             else {
-                finalMessage = "Installed Successfully! Restart Minecraft and Edit Profile->Use Version minecrift-" + version + mod;
+                finalMessage = "Installed successfully! Restart Minecraft" +
+                        (profileCreated == false ? " and Edit Profile->Use Version " + minecriftVersionName : " and select the '" + getMinecraftProfileName() + "' profile.");
             }
             monitor.setProgress(100);
             monitor.close();
-			return null;
-		}
+            return null;
+        }
 
-		/*
-		 * Executed in event dispatching thread
-		 */
-		@Override
-		public void done() {
-			setCursor(null); // turn off the wait cursor
+        /*
+         * Executed in event dispatching thread
+         */
+        @Override
+        public void done() {
+            setCursor(null); // turn off the wait cursor
             JOptionPane.showMessageDialog(null, finalMessage, "Complete", JOptionPane.INFORMATION_MESSAGE);
-	        dialog.dispose();
-	        emptyFrame.dispose();
-		}
+            dialog.dispose();
+            emptyFrame.dispose();
+        }
 
-	}
-	@Override
-	public void propertyChange(PropertyChangeEvent evt) {
+    }
+    @Override
+    public void propertyChange(PropertyChangeEvent evt) {
         if ("progress" == evt.getPropertyName()) {
             int progress = (Integer) evt.getNewValue();
             System.out.println(progress);
-        } 
-	}
+        }
+    }
 
     public void run()
     {
-        JOptionPane optionPane = new JOptionPane(this, JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION);
+        JOptionPane optionPane = new JOptionPane(this, JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION, null, new String[]{"Install", "Cancel"});
 
         emptyFrame = new Frame("Minecraft VR Installer");
         emptyFrame.setUndecorated(true);
@@ -446,24 +653,23 @@ public class Installer extends JPanel  implements PropertyChangeListener
         dialog = optionPane.createDialog(emptyFrame, "Minecraft VR Installer");
         dialog.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
         dialog.setVisible(true);
-        int result = (Integer) (optionPane.getValue() != null ? optionPane.getValue() : -1);
-        if (result == JOptionPane.OK_OPTION)
+        if (((String)optionPane.getValue()).equalsIgnoreCase("Install"))
         {
-        	monitor = new ProgressMonitor(null, "Installing Minecrift...", "", 0, 100);
-        	monitor.setMillisToDecideToPopup(0);
-        	monitor.setMillisToPopup(0);
+            monitor = new ProgressMonitor(null, "Installing Minecrift...", "", 0, 100);
+            monitor.setMillisToDecideToPopup(0);
+            monitor.setMillisToPopup(0);
 
             task = new InstallTask();
-        	task.addPropertyChangeListener(this);
+            task.addPropertyChangeListener(this);
             task.execute();
         }
         else{
-	        dialog.dispose();
-	        emptyFrame.dispose();
+            dialog.dispose();
+            emptyFrame.dispose();
         }
     }
 
-	private static void createAndShowGUI() {
+    private static void createAndShowGUI() {
         String userHomeDir = System.getProperty("user.home", ".");
         String osType = System.getProperty("os.name").toLowerCase();
         String mcDir = ".minecraft";
@@ -481,16 +687,60 @@ public class Installer extends JPanel  implements PropertyChangeListener
         {
             minecraftDir = new File(userHomeDir, mcDir);
         }
-        
+
         Installer panel = new Installer(minecraftDir);
         panel.run();
-	}
+    }
+
+    private boolean updateLauncherJson(File mcBaseDirFile, String minecriftVer)
+    {
+        boolean result = false;
+
+        try {
+            int jsonIndentSpaces = 2;
+            String profileName = getMinecraftProfileName();
+            File fileJson = new File(mcBaseDirFile, "launcher_profiles.json");
+            String json = readAsciiFile(fileJson);
+            JSONObject root = new JSONObject(json);
+            //System.out.println(root.toString(jsonIndentSpaces));
+
+            JSONObject profiles = (JSONObject)root.get("profiles");
+            JSONObject prof = null;
+            try {
+                prof = (JSONObject) profiles.get(profileName);
+            }
+            catch (Exception e) {}
+
+            if (prof == null) {
+                prof = new JSONObject();
+                prof.put("name", profileName);
+                prof.put("javaArgs", "-Xmx1G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M -Dfml.ignoreInvalidMinecraftCertificates=true -Dfml.ignorePatchDiscrepancies=true");
+                prof.put("useHopperCrashService", false);
+                prof.put("launcherVisibilityOnGameClose", "keep the launcher open");
+                profiles.put(profileName, prof);
+            }
+            prof.put("lastVersionId", minecriftVer);
+            root.put("selectedProfile", profileName);
+
+            FileWriter fwJson = new FileWriter(fileJson);
+            fwJson.write(root.toString(jsonIndentSpaces));
+            fwJson.flush();
+            fwJson.close();
+
+            result = true;
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        return result;
+    }
 
     private class FileSelectAction extends AbstractAction
     {
-		private static final long serialVersionUID = 743815386102831493L;
+        private static final long serialVersionUID = 743815386102831493L;
 
-		@Override
+        @Override
         public void actionPerformed(ActionEvent e)
         {
             JFileChooser dirChooser = new JFileChooser();
@@ -501,36 +751,37 @@ public class Installer extends JPanel  implements PropertyChangeListener
             int response = dirChooser.showOpenDialog(Installer.this);
             switch (response)
             {
-            case JFileChooser.APPROVE_OPTION:
-                targetDir = dirChooser.getSelectedFile();
-                updateFilePath();
-                break;
-            default:
-                break;
+                case JFileChooser.APPROVE_OPTION:
+                    targetDir = dirChooser.getSelectedFile();
+                    updateFilePath();
+                    break;
+                default:
+                    break;
             }
         }
     }
 
     public Installer(File targetDir)
     {
+        ToolTipManager.sharedInstance().setDismissDelay(Integer.MAX_VALUE);
         this.setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
 
         JPanel logoSplash = new JPanel();
-    	logoSplash.setLayout(new BoxLayout(logoSplash, BoxLayout.Y_AXIS));
-	    try {
+        logoSplash.setLayout(new BoxLayout(logoSplash, BoxLayout.Y_AXIS));
+        try {
             // Read png
-	        BufferedImage image;
-			image = ImageIO.read(Installer.class.getResourceAsStream("logo.png"));
-	        ImageIcon icon = new ImageIcon(image);
-	        JLabel logoLabel = new JLabel(icon);
+            BufferedImage image;
+            image = ImageIO.read(Installer.class.getResourceAsStream("logo.png"));
+            ImageIcon icon = new ImageIcon(image);
+            JLabel logoLabel = new JLabel(icon);
             logoLabel.setAlignmentX(CENTER_ALIGNMENT);
             logoLabel.setAlignmentY(CENTER_ALIGNMENT);
             logoLabel.setSize(image.getWidth(), image.getHeight());
             if (!QUIET_DEV)
 	            logoSplash.add(logoLabel);
-		} catch (IOException e) {
-		} catch( IllegalArgumentException e) {
-		}
+        } catch (IOException e) {
+        } catch( IllegalArgumentException e) {
+        }
 
         userHomeDir = System.getProperty("user.home", ".");
         osType = System.getProperty("os.name").toLowerCase();
@@ -540,19 +791,19 @@ public class Installer extends JPanel  implements PropertyChangeListener
             appDataDir = System.getenv("APPDATA");
         }
 
-	    version = "UNKNOWN";
-		try {
-			InputStream ver = Installer.class.getResourceAsStream("version");
-			if( ver != null )
-			{
-				String[] tok = new BufferedReader(new InputStreamReader(ver)).readLine().split(":");
-				if( tok.length > 0)
-				{
-					jar_id = tok[0];
-					version = tok[1];
-				}
-			}
-		} catch (IOException e) { }
+        version = "UNKNOWN";
+        try {
+            InputStream ver = Installer.class.getResourceAsStream("version");
+            if( ver != null )
+            {
+                String[] tok = new BufferedReader(new InputStreamReader(ver)).readLine().split(":");
+                if( tok.length > 0)
+                {
+                    jar_id = tok[0];
+                    version = tok[1];
+                }
+            }
+        } catch (IOException e) { }
 
         // Read release notes, save to file
         String tmpFileName = System.getProperty("java.io.tmpdir") + "Minecrift_" + version.toLowerCase() + "_release_notes.txt";
@@ -576,7 +827,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
             logoSplash.add(releaseNotesLink);
         }
         
-		logoSplash.add(Box.createRigidArea(new Dimension(5,20)));
+        logoSplash.add(Box.createRigidArea(new Dimension(5,20)));
         tag = new JLabel("Select path to minecraft. (The default here is almost always what you want.)");
         tag.setAlignmentX(CENTER_ALIGNMENT);
         tag.setAlignmentY(CENTER_ALIGNMENT);
@@ -585,7 +836,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
         logoSplash.setAlignmentX(CENTER_ALIGNMENT);
         logoSplash.setAlignmentY(TOP_ALIGNMENT);
         this.add(logoSplash);
-		
+
 
         JPanel entryPanel = new JPanel();
         entryPanel.setLayout(new BoxLayout(entryPanel,BoxLayout.X_AXIS));
@@ -622,59 +873,83 @@ public class Installer extends JPanel  implements PropertyChangeListener
         this.add(fileEntryPanel);
         this.add(Box.createVerticalStrut(5));
 
-		JPanel optPanel = new JPanel();
-		optPanel.setLayout( new BoxLayout(optPanel, BoxLayout.Y_AXIS));
+        JPanel optPanel = new JPanel();
+        optPanel.setLayout( new BoxLayout(optPanel, BoxLayout.Y_AXIS));
         optPanel.setAlignmentX(LEFT_ALIGNMENT);
         optPanel.setAlignmentY(TOP_ALIGNMENT);
 
         //Add forge options
-		JPanel forgePanel = new JPanel();
-		forgePanel.setLayout( new BoxLayout(forgePanel, BoxLayout.X_AXIS));
+        JPanel forgePanel = new JPanel();
+        forgePanel.setLayout( new BoxLayout(forgePanel, BoxLayout.X_AXIS));
         //Create forge: no/yes buttons
-		useForge = new JCheckBox("Install with Forge " + FORGE_VERSION,false);
-		forgeVersion = new JComboBox();
-        useForge.setEnabled(true);
+        useForge = new JCheckBox("Install with Forge " + FORGE_VERSION,false);
+        forgeVersion = new JComboBox();
+        if (!ALLOW_FORGE_INSTALL)
+            useForge.setEnabled(false);
+        useForge.setToolTipText(
+                "<html>" +
+                "If checked, installs Minecrift with Forge support. The correct version of Forge<br>" +
+                "(as displayed) must already be installed.<br>" +
+                "NOT YET SUPPORTED.<br>" +
+                "</html>");
 
-		//Add "yes" and "which version" to the forgePanel
-		useForge.setAlignmentX(LEFT_ALIGNMENT);
-		forgeVersion.setAlignmentX(LEFT_ALIGNMENT);
-		forgePanel.add(useForge);
-		//forgePanel.add(forgeVersion);
-		
-		useHydra = new JCheckBox("Include Razer Hydra support",false);
-		useHydra.setAlignmentX(LEFT_ALIGNMENT);
+        //Add "yes" and "which version" to the forgePanel
+        useForge.setAlignmentX(LEFT_ALIGNMENT);
+        forgeVersion.setAlignmentX(LEFT_ALIGNMENT);
+        forgePanel.add(useForge);
+        //forgePanel.add(forgeVersion);
+
+        // Profile creation / update support
+        createProfile = new JCheckBox("Add/update '" + getMinecraftProfileName() + "' profile", false);
+        createProfile.setAlignmentX(LEFT_ALIGNMENT);
+        createProfile.setSelected(true);
+        createProfile.setToolTipText(
+                "<html>" +
+                "If checked, if a Minecrift profile doesn't already exist within the Minecraft launcher<br>" +
+                "one is added. Then the profile is selected, and this Minecrift version is set as the<br>" +
+                "current version.<br>" +
+                "</html>");
+
+        useHydra = new JCheckBox("Include Razer Hydra support",false);
+        useHydra.setAlignmentX(LEFT_ALIGNMENT);
+        useHydra.setToolTipText(
+                "<html>" +
+                "If checked, installs the additional Razor Hydra native library required for Razor Hydra<br>" +
+                "support." +
+                "</html>");
 
         useHrtf = new JCheckBox("Setup binaural audio", false);
         useHrtf.setToolTipText(
                 "<html>" +
-                "If checked, the installer will create the configuration file needed for OpenAL HRTF<br>" +
-                "ear-aware sound in Minecraft (and other games).<br>" +
-                " If the file has previously been created, you do not need to check this again.<br>" +
-                " NOTE: Your sound card's output MUST be set to 44.1Khz.<br>" +
-                " WARNING, will overwrite " + (isWindows ? (appDataDir + "\\alsoft.ini") : (userHomeDir + "/.alsoftrc")) + "!<br>" +
-                " Delete the " + (isWindows ? "alsoft.ini" : "alsoftrc") + " file to disable HRTF again." +
-                "</html>");
+                        "If checked, the installer will create the configuration file needed for OpenAL HRTF<br>" +
+                        "ear-aware sound in Minecraft (and other games).<br>" +
+                        " If the file has previously been created, you do not need to check this again.<br>" +
+                        " NOTE: Your sound card's output MUST be set to 44.1Khz.<br>" +
+                        " WARNING, will overwrite " + (isWindows ? (appDataDir + "\\alsoft.ini") : (userHomeDir + "/.alsoftrc")) + "!<br>" +
+                        " Delete the " + (isWindows ? "alsoft.ini" : "alsoftrc") + " file to disable HRTF again." +
+                        "</html>");
         useHrtf.setAlignmentX(LEFT_ALIGNMENT);
 
-		//Add option panels option panel
-		forgePanel.setAlignmentX(LEFT_ALIGNMENT);
-		optPanel.add(forgePanel);
-		optPanel.add(useHydra);
+        //Add option panels option panel
+        forgePanel.setAlignmentX(LEFT_ALIGNMENT);
+        optPanel.add(createProfile);
+        optPanel.add(forgePanel);
+        optPanel.add(useHydra);
         optPanel.add(useHrtf);
-		this.add(optPanel);
+        this.add(optPanel);
 
 
         this.add(Box.createVerticalGlue());
-		JLabel website = linkify("Minecraft VR is Open Source (LGPL)! Check back here for updates.","http://minecraft-vr.com","http://minecraft-vr.com") ;
-		JLabel optifine = linkify("We make use of OptiFine for performance. Please consider donating to them!","http://optifine.net/donate.php","http://optifine.net/donate.php");
+        JLabel website = linkify("Minecraft VR is Open Source (LGPL)! Check back here for updates.","http://minecraft-vr.com","http://minecraft-vr.com") ;
+        JLabel optifine = linkify("We make use of OptiFine for performance. Please consider donating to them!","http://optifine.net/donate.php","http://optifine.net/donate.php");
 
-		website.setAlignmentX(CENTER_ALIGNMENT);
+        website.setAlignmentX(CENTER_ALIGNMENT);
         website.setHorizontalAlignment(SwingConstants.CENTER);
-		optifine.setAlignmentX(CENTER_ALIGNMENT);
+        optifine.setAlignmentX(CENTER_ALIGNMENT);
         optifine.setHorizontalAlignment(SwingConstants.CENTER);
-		this.add(Box.createRigidArea(new Dimension(5,20)));
-		this.add( website );
-		this.add( optifine );
+        this.add(Box.createRigidArea(new Dimension(5,20)));
+        this.add( website );
+        this.add( optifine );
 
         this.setAlignmentX(LEFT_ALIGNMENT);
 
@@ -684,15 +959,15 @@ public class Installer extends JPanel  implements PropertyChangeListener
 
     private void updateFilePath()
     {
-    	String[] forgeVersions = null;
+        String[] forgeVersions = null;
         try
         {
             targetDir = targetDir.getCanonicalFile();
             if( targetDir.exists() ) {
-            	File ForgeDir = new File( targetDir, "libraries"+File.separator+"net"+File.separator+"minecraftforge"+File.separator+"minecraftforge");
-            	if( ForgeDir.isDirectory() ) {
-            		forgeVersions = ForgeDir.list();
-            	}
+                File ForgeDir = new File( targetDir, "libraries"+File.separator+"net"+File.separator+"minecraftforge"+File.separator+"minecraftforge");
+                if( ForgeDir.isDirectory() ) {
+                    forgeVersions = ForgeDir.list();
+                }
             }
             selectedDirText.setText(targetDir.getPath());
             selectedDirText.setForeground(Color.BLACK);
@@ -718,49 +993,49 @@ public class Installer extends JPanel  implements PropertyChangeListener
             }
         }
         if( forgeVersions == null || forgeVersions.length == 0 )
-        	forgeVersions =  new String[] { };
+            forgeVersions =  new String[] { };
         forgeVersion.setModel( new DefaultComboBoxModel(forgeVersions));
     }
 
-    
-	public static void main(String[] args)
+
+    public static void main(String[] args)
     {
-		try {
-        	// Set System L&F
-	        UIManager.setLookAndFeel(
+        try {
+            // Set System L&F
+            UIManager.setLookAndFeel(
                     UIManager.getSystemLookAndFeelClassName());
-	    } catch (Exception e) { }
-		
-		javax.swing.SwingUtilities.invokeLater(new Runnable() {
+        } catch (Exception e) { }
+
+        javax.swing.SwingUtilities.invokeLater(new Runnable() {
             public void run() {
                 createAndShowGUI();
             }
         });
-	}
-	public static JLabel linkify(final String text, String URL, String toolTip)
-	{
-		URI temp = null;
-		try
-		{
-			temp = new URI(URL);
-		}
-		catch (Exception e)
-		{
-			e.printStackTrace();
-		}
-		final URI uri = temp;
-		final JLabel link = new JLabel();
-		link.setText("<HTML><FONT color=\"#000099\">"+text+"</FONT></HTML>");
-		if(!toolTip.equals(""))
-			link.setToolTipText(toolTip);
-		link.setCursor(new Cursor(Cursor.HAND_CURSOR));
+    }
+    public static JLabel linkify(final String text, String URL, String toolTip)
+    {
+        URI temp = null;
+        try
+        {
+            temp = new URI(URL);
+        }
+        catch (Exception e)
+        {
+            e.printStackTrace();
+        }
+        final URI uri = temp;
+        final JLabel link = new JLabel();
+        link.setText("<HTML><FONT color=\"#000099\">"+text+"</FONT></HTML>");
+        if(!toolTip.equals(""))
+            link.setToolTipText(toolTip);
+        link.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		link.addMouseListener(new MouseListener() {
             public void mouseExited(MouseEvent arg0) {
-                link.setText("<HTML><FONT color=\"#000099\">" + text + "</FONT></HTML>");
+				link.setText("<HTML><FONT color=\"#000099\">"+text+"</FONT></HTML>");
             }
 
             public void mouseEntered(MouseEvent arg0) {
-                link.setText("<HTML><FONT color=\"#000099\"><U>" + text + "</U></FONT></HTML>");
+				link.setText("<HTML><FONT color=\"#000099\"><U>"+text+"</U></FONT></HTML>");
             }
 
             public void mouseClicked(MouseEvent arg0) {
@@ -783,10 +1058,38 @@ public class Installer extends JPanel  implements PropertyChangeListener
             public void mouseReleased(MouseEvent e) {
             }
         });
-		return link;
-	}
+        return link;
+    }
 
-    private boolean copyInputStreamToFile( InputStream in, File file ) {
+    private String getMinecraftProfileName()
+    {
+        return "Minecrift " + MINECRAFT_VERSION;
+    }
+
+    public static String readAsciiFile(File file)
+            throws IOException
+    {
+        FileInputStream fin = new FileInputStream(file);
+        InputStreamReader inr = new InputStreamReader(fin, "ASCII");
+        BufferedReader br = new BufferedReader(inr);
+        StringBuffer sb = new StringBuffer();
+        for (;;) {
+            String line = br.readLine();
+            if (line == null)
+                break;
+
+            sb.append(line);
+            sb.append("\n");
+        }
+        br.close();
+        inr.close();
+        fin.close();
+
+        return sb.toString();
+    }
+	
+	private boolean copyInputStreamToFile( InputStream in, File file ) 
+	{
         boolean success = true;
         try {
             OutputStream out = new FileOutputStream(file);
@@ -804,4 +1107,5 @@ public class Installer extends JPanel  implements PropertyChangeListener
 
         return success;
     }
+
 }
